cmake_minimum_required(VERSION 3.21)
project(DSA)

set(CMAKE_CXX_STANDARD 14)

add_subdirectory("${PROJECT_SOURCE_DIR}/Hashing/unordered_set" "${PROJECT_SOURCE_DIR}/Hashing/unordered_set/unordered_setOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/Hashing/unordered_map" "${PROJECT_SOURCE_DIR}/Hashing/unordered_map/unordered_mapOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/Hashing/CountDistinctElements" "${PROJECT_SOURCE_DIR}/Hashing/CountDistinctElements/CountDistinctElementsOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/Hashing/FrequencyOfElements" "${PROJECT_SOURCE_DIR}/Hashing/FrequencyOfElements/FrequencyOfElementsOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/Hashing/IntersectionOf2Arrays" "${PROJECT_SOURCE_DIR}/Hashing/IntersectionOf2Arrays/IntersectionOf2ArraysOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/Hashing/unionOf2SortedArrays" "${PROJECT_SOURCE_DIR}/Hashing/unionOf2SortedArrays/unionOf2SortedArraysOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/Hashing/PairWithGivenSumInUnsortedArray" "${PROJECT_SOURCE_DIR}/Hashing/PairWithGivenSumInUnsortedArray/PairWithGivenSumInUnsortedArrayOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/Hashing/SubarrayWith0Sum" "${PROJECT_SOURCE_DIR}/Hashing/SubarrayWith0Sum/SubarrayWith0SumOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/Hashing/SubarrayWithGivenSum" "${PROJECT_SOURCE_DIR}/Hashing/SubarrayWithGivenSum/SubarrayWithGivenSumOutput")

add_subdirectory("${PROJECT_SOURCE_DIR}/String/IntroductionToString" "${PROJECT_SOURCE_DIR}/String/IntroductionToString/IntroductionToStringOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/String/PalindromeCheck" "${PROJECT_SOURCE_DIR}/String/PalindromeCheck/PalindromeCheckOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/String/StringIsSubsequenceOfOther" "${PROJECT_SOURCE_DIR}/String/StringIsSubsequenceOfOther/StringIsSubsequenceOfOtherOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/String/CheckAnagram" "${PROJECT_SOURCE_DIR}/String/CheckAnagram/CheckAnagramOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/String/LeftmostRepeatingCharacter" "${PROJECT_SOURCE_DIR}/String/LeftmostRepeatingCharacter/LeftmostRepeatingCharacterOutput")

add_subdirectory("${PROJECT_SOURCE_DIR}/LinkedList/LLImplement" "${PROJECT_SOURCE_DIR}/LinkedList/LLImplement/LLImplementatOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/LinkedList/TraversingLL" "${PROJECT_SOURCE_DIR}/LinkedList/TraversingLL/TraversingLLOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/LinkedList/RecursiveTraversalLL" "${PROJECT_SOURCE_DIR}/LinkedList/RecursiveTraversalLL/RecursiveTraversalLLOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/LinkedList/InsertAtBegin" "${PROJECT_SOURCE_DIR}/LinkedList/InsertAtBegin/InsertAtBeginOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/LinkedList/InsertAtEnd" "${PROJECT_SOURCE_DIR}/LinkedList/InsertAtEnd/InsertAtEndOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/LinkedList/DeleteFirstNode" "${PROJECT_SOURCE_DIR}/LinkedList/DeleteFirstNode/DeleteFirstNodeOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/LinkedList/DeleteLastNode" "${PROJECT_SOURCE_DIR}/LinkedList/DeleteLastNode/DeleteLastNodeOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/LinkedList/InsertAtAnyPos" "${PROJECT_SOURCE_DIR}/LinkedList/InsertAtAnyPos/InsertAtAnyPosOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/LinkedList/SearchInLL" "${PROJECT_SOURCE_DIR}/LinkedList/SearchInLL/SearchInLLOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/LinkedList/DoubleLL" "${PROJECT_SOURCE_DIR}/LinkedList/DoubleLL/DoubleLLOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/LinkedList/InsertAtBeginInDoubleLL" "${PROJECT_SOURCE_DIR}/LinkedList/InsertAtBeginInDoubleLL/InsertAtBeginInDoubleLLOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/LinkedList/InsertAtEndInDoubleLL" "${PROJECT_SOURCE_DIR}/LinkedList/InsertAtEndInDoubleLL/InsertAtEndInDoubleLLOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/LinkedList/ReverseADoubleLL" "${PROJECT_SOURCE_DIR}/LinkedList/ReverseADoubleLL/ReverseADoubleLLOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/LinkedList/DeleteHeadDDL" "${PROJECT_SOURCE_DIR}/LinkedList/DeleteHeadDDL/DeleteHeadDDLOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/LinkedList/DeleteLastDDL" "${PROJECT_SOURCE_DIR}/LinkedList/DeleteLastDDL/DeleteLastDDLOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/LinkedList/InsertAtAnyPosDDL" "${PROJECT_SOURCE_DIR}/LinkedList/InsertAtAnyPosDDL/InsertAtAnyPosDDLOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/LinkedList/RemoveDuplicateLL" "${PROJECT_SOURCE_DIR}/LinkedList/RemoveDuplicateLL/RemoveDuplicateLLOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/LinkedList/CircularLL" "${PROJECT_SOURCE_DIR}/LinkedList/CircularLL/CircularLLOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/LinkedList/InsertAtBeginCLL" "${PROJECT_SOURCE_DIR}/LinkedList/InsertAtBeginCLL/InsertAtBeginCLLOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/LinkedList/InsertAtEndCLL" "${PROJECT_SOURCE_DIR}/LinkedList/InsertAtEndCLL/InsertAtEndCLLOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/LinkedList/DeleteHeadCLL" "${PROJECT_SOURCE_DIR}/LinkedList/DeleteHeadCLL/DeleteHeadCLLOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/LinkedList/DeleteKthCLL" "${PROJECT_SOURCE_DIR}/LinkedList/DeleteKthCLL/DeleteKthCLLOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/LinkedList/CircularDoubleLL" "${PROJECT_SOURCE_DIR}/LinkedList/CircularDoubleLL/CircularDoubleLLOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/LinkedList/SortedInsertLL" "${PROJECT_SOURCE_DIR}/LinkedList/SortedInsertLL/SortedInsertLLOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/LinkedList/InsertMiddleLL" "${PROJECT_SOURCE_DIR}/LinkedList/InsertMiddleLL/InsertMiddleLLOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/LinkedList/NthNodeFromEnd" "${PROJECT_SOURCE_DIR}/LinkedList/NthNodeFromEnd/NthNodeFromEndOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/LinkedList/ReverseIterativeLL" "${PROJECT_SOURCE_DIR}/LinkedList/ReverseIterativeLL/ReverseIterativeLLOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/LinkedList/MergeTwoSortedLL" "${PROJECT_SOURCE_DIR}/LinkedList/MergeTwoSortedLL/MergeTwoSortedLLOutput")

add_subdirectory("${PROJECT_SOURCE_DIR}/Stack/ArrayImplementation" "${PROJECT_SOURCE_DIR}/Stack/ArrayImplementation/ArrayImplementationOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/Stack/VectorImplementation" "${PROJECT_SOURCE_DIR}/Stack/VectorImplementation/VectorImplementationOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/Stack/LLImplementation" "${PROJECT_SOURCE_DIR}/Stack/LLImplementation/LLImplementationOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/Stack/StackTraversal" "${PROJECT_SOURCE_DIR}/Stack/StackTraversal/StackTraversalOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/Stack/BalancedParantheses" "${PROJECT_SOURCE_DIR}/Stack/BalancedParantheses/BalancedParanthesesOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/Stack/ImplementTwoStack" "${PROJECT_SOURCE_DIR}/Stack/ImplementTwoStack/ImplementTwoStackOutput")

add_subdirectory("${PROJECT_SOURCE_DIR}/Queue/SimpleArrayImplementation" "${PROJECT_SOURCE_DIR}/Queue/SimpleArrayImplementation/SimpleArrayImplementationOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/Queue/CircularArrayImplementation" "${PROJECT_SOURCE_DIR}/Queue/CircularArrayImplementation/CircularArrayImplementationOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/Queue/LinkedListImplementation" "${PROJECT_SOURCE_DIR}/Queue/LinkedListImplementation/LinkedListImplementationOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/Queue/QueueTraversal" "${PROJECT_SOURCE_DIR}/Queue/QueueTraversal/QueueTraversalOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/Queue/StackUsingQueue" "${PROJECT_SOURCE_DIR}/Queue/StackUsingQueue/StackUsingQueueOutput")

